# dream-wheels-ai-tg

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  bot.py  main.py  preview_mask.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.vercel/: project.json
admin/: README.md  package-lock.json  package.json
docs/: CHAT_CONTEXT_HANDOFF.md  ai-rendering-pipeline.md  architecture.md  customer-development.md  data-model.md  dream_wheels_ai_architecture_v1_2.md  fal-mask-inpaint-eval.md  fitment-api-contract-v1.md  fitment-compatibility.md  fitment-pipeline-handoff.md  fitment-provider-discovery.md  keep-alive-setup.md  npd-receipts-plan.md  payment-hardening-plan.md  payments-boundaries.md  post-robokassa-next-step-note.md  presentation-context-export.md  product-roadmap.md  robokassa-pipeline-uml.md  robokassa-test-prod-checklist.md  sprint-1-dashboard-smoke-checklist.md  telegram-auth-library-evaluation.md  ui-design-code.md
migrations/: 0003_storage_buckets_rls.sql  0004_add_feedback.sql  0005_credit_ledger.sql  0006_preorders_robokassa.sql  0007_credit_topups_ledger.sql  0008_nullable_preorder_email.sql  0009_payments_mvp.sql  0009_staging_credit_ledger_conflict_compat.sql  0011_credit_accounts_ledger_schema_align.sql  0011_credit_ledger_idempotency_backfill.sql  0012_credit_accounts_ledger_schema_align.sql  0013_credit_ledger_trial_grant_compat.sql  0013_payments_provider_neutral_fields.sql  0015_durable_render_assets.sql  0016_credit_ledger_expiration_compat.sql  README.md
scripts/: fal_inpaint_eval.py  install-agent-skills.sh  openai_image_edit_eval.py  prepare_fal_eval_manifest.py  reve_image_edit_eval.py
src/: assets_service.py  auth.py  auth_api.py  bot.py  config.py  credits_service.py  db.py  fal_inpaint.py  jobs_api.py  main.py  openai_image_edit.py  payments_api.py  payments_service.py  prompts.py  rate_limit.py  redis_client.py  reve_client.py  reve_image_edit.py  rim.py  robokassa_client.py  share_api.py  storage.py  (+1 more)
(+94 files in other folders)
